--- a/web/awaria/List.xhtml
+++ b/web/awaria/List.xhtml
@@ -38,7 +38,7 @@
                                 <h:outputText value="#{bundle.ListAwariaTitle_dataZgloszenia}"/>
                             </f:facet>
                             <h:outputText value="#{item.dataZgloszenia}">
-                                <f:convertDateTime pattern="HH:mm:ss" />
+                                <f:convertDateTime pattern="dd/MM/yyyy" />
                             </h:outputText>
                         </p:column>
                         <p:column>
