--- a/web/informacje/Edit.xhtml
+++ b/web/informacje/Edit.xhtml
@@ -15,7 +15,7 @@
                         <p:outputLabel value="#{bundle.EditInformacjeLabel_id}" for="id" />
                         <p:inputText id="id" value="#{informacjeController.selected.id}" title="#{bundle.EditInformacjeTitle_id}" required="true" requiredMessage="#{bundle.EditInformacjeRequiredMessage_id}"/>
                         <p:outputLabel value="#{bundle.EditInformacjeLabel_data}" for="data" />
-                        <p:calendar id="data" pattern="HH:mm:ss" value="#{informacjeController.selected.data}" title="#{bundle.EditInformacjeTitle_data}" required="true" requiredMessage="#{bundle.EditInformacjeRequiredMessage_data}" showOn="button"/>
+                        <p:calendar id="data" pattern="dd/MM/yyyy" value="#{informacjeController.selected.data}" title="#{bundle.EditInformacjeTitle_data}" required="true" requiredMessage="#{bundle.EditInformacjeRequiredMessage_data}" showOn="button"/>
                         <p:outputLabel value="#{bundle.EditInformacjeLabel_opis}" for="opis" />
                         <p:inputText id="opis" value="#{informacjeController.selected.opis}" title="#{bundle.EditInformacjeTitle_opis}" required="true" requiredMessage="#{bundle.EditInformacjeRequiredMessage_opis}"/>
                         <p:outputLabel value="#{bundle.EditInformacjeLabel_budynekId}" for="budynekId" />
