--- a/web/informacje/List_1.xhtml
+++ b/web/informacje/List_1.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/template_lokator.xhtml">
 
 
         <ui:define name="title">
@@ -16,7 +16,7 @@
         <ui:define name="body">
             <h:form id="InformacjeListForm">
                 <p:panel header="#{bundle.ListInformacjeTitle}">
-                    <p:dataTable id="datalist" value="#{informacjeController.items}" var="item"
+                    <p:dataTable id="datalist" value="#{informacjeController.budynek(lokatorController.selected.mieszkanieId.budynekId)}" var="item"
                                  selectionMode="single" selection="#{informacjeController.selected}"
                                  paginator="true"
                                  rowKey="#{item.id}"
@@ -24,15 +24,10 @@
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
 
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
+                        <p:ajax event="rowSelect"   update="powrotButton"/>
+                        <p:ajax event="rowUnselect" update="powrotButton"/>
 
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListInformacjeTitle_id}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.id}"/>
-                        </p:column>
+                        
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListInformacjeTitle_data}"/>
@@ -47,17 +42,9 @@
                             </f:facet>
                             <h:outputText value="#{item.opis}"/>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListInformacjeTitle_budynekId}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.budynekId}"/>
-                        </p:column>
+                       
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{informacjeController.prepareCreate}" update=":InformacjeCreateForm" oncomplete="PF('InformacjeCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":InformacjeViewForm" oncomplete="PF('InformacjeViewDialog').show()" disabled="#{empty informacjeController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":InformacjeEditForm" oncomplete="PF('InformacjeEditDialog').show()" disabled="#{empty informacjeController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{informacjeController.destroy}" update=":growl,datalist" disabled="#{empty informacjeController.selected}"/>
+                             <p:commandButton id="powrotButton"    value="Powrót" action="/lokator/zalogowany_lokator.xhtml"/>
                         </f:facet>
                     </p:dataTable>
                 </p:panel>
