--- a/web/Login_1.xhtml
+++ b/web/Login_1.xhtml
@@ -12,34 +12,25 @@
 
         <h:form id="logowanie">
             <p:messages id="messages"  autoUpdate="true" closable="true"  />
-            <p:fieldset legend="Logowanie" style="width:20%;margin-left: 40%;background: silver" >
             <h:panelGrid columns="2">
-                <h:outputLabel value="Login" for="login" style="font-weight: bold" />
+                <h:outputLabel value="Login" for="login"  />
                 <h:inputText id="login"  value="#{String1}" title="#{bundle.CreatePacjentTitle_login}" /> 
-                <h:outputLabel value="Hasło" for="haslo" style="font-weight: bold"/>
+                <h:outputLabel value="Hasło" for="haslo" />
                 <h:inputSecret id="haslo" value="#{String2}" />
-                            <p:watermark for="login" value="Login"/>     
-            <p:watermark for="haslo" value="Hasło"/>   
             </h:panelGrid>
             <br />
             <p:commandButton action="#{lokatorController.logowanie(String1,String2)}" value="Zaloguj" />
             <br />
-            <p:commandButton id="createButton" icon="ui-icon-plus"   value="Rejestracja" action="/rejestracja.xhtml"/>        
+            <p:commandButton id="createButton" icon="ui-icon-plus"   value="Rejestracja" actionListener="#{lokatorController.prepareCreate}" update=":LokatorCreateForm" oncomplete="PF('LokatorCreateDialog').show()"/>        
             <br />
             <p:commandButton value="Powrót"  action="/index.xhtml" ajax="false"/>
 
+            <p:watermark for="login" value="Login"/>     
+            <p:watermark for="haslo" value="Hasło"/>   
 
-   </p:fieldset>
-
+ 
 
         </h:form>
-
- 
-    
-
-  
- 
-   
 
 
 
