--- a/web/Login_2.xhtml
+++ b/web/Login_2.xhtml
@@ -27,7 +27,7 @@
                 <br />
                 <p:commandButton action="#{adminController.find}" value="Zaloguj" />
                 <br />    
-                <p:commandButton value="Powrót"  action="/index.xhtml" ajax="false"/>
+                <p:commandButton value="Powrót"  action="/index.xhtml" ajax="false" immediate="true"/>
                                  
                      <p:watermark for="login" value="Login"/>     
                           <p:watermark for="haslo" value="Haslo"/>               
