--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -8,10 +8,11 @@
     </h:head>
     <h:body>
         <h:form>
-            <h:commandButton value="Lokator" action="Login.xhtml"/>
-            <h:commandButton value="Właściciel" />
-            <h:commandButton value="Admin" action="Login_2.xhtml"/>
-
+            <div style="margin-left: 30%">
+            <h:commandButton value="Lokator" action="Login.xhtml" style="width: 20%;height: 150px"/>
+            <h:commandButton value="Właściciel" style="width: 20%;height: 150px"/>
+            <h:commandButton value="Admin" action="Login_2.xhtml" style="width: 20%;height: 150px"/>
+            </div>
         </h:form>
        
     </h:body>
