--- a/web/lokator/zalogowany_lokator.xhtml
+++ b/web/lokator/zalogowany_lokator.xhtml
@@ -1,25 +1,33 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
         <title>Facelet Title</title>
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
-        <h:outputLabel value="Witaj #{lokatorController.selected.imie} #{lokatorController.selected.nazwisko}!"/>
-        <h:form>
+         <h:form>
+         <p:messages id="messages"  autoUpdate="true" closable="true"  />
+         <p:fieldset legend="Witaj #{lokatorController.selected.imie} #{lokatorController.selected.nazwisko}!" style="width:50%;margin-left: 25%;background: silver" >
+        
+             <div style="margin-left:20% ">
+
+        <h:commandButton action="/awaria/List_1" value="Zgłoś awarię" style="width: 20%;height: 150px;" />
+
+        <h:commandButton action="/informacje/List_1" value="Informacje" style="width: 20%;height: 150px"/>
+
+        <h:commandButton action="/oplaty/List_1" value="Opłaty" style="width: 20%;height: 150px"/>
+
+        <h:commandButton action="/wlasciciel/List_1" value="Kontakt z właścicielem" style="width: 20%;height: 150px"/>
         <br />
-        <h:commandButton action="/awaria/List_1" value="Zgłoś awarię"/>
-        <br />
-        <h:commandButton action="/informacje/List_1" value="Informacje"/>
-        <br /> 
-        <h:commandButton action="/oplaty/List_1" value="Opłaty"/>
-        <br />
-        <h:commandButton action="/wlasciciel/List_1" value="Kontakt z właścicielem"/>
-        <br />
-        <h:commandButton action="#{lokatorController.wylogujLokator()}" value="Wyloguj"/>
+        <h:commandButton action="#{lokatorController.wylogujLokator()}" value="Wyloguj" style="margin-left: 30%;width: 20%;height: 20px"/>
+        </div>
+        </p:fieldset>
         </h:form>
+        
     </h:body>
 
 
