--- a/web/mieszkanie/List.xhtml
+++ b/web/mieszkanie/List.xhtml
@@ -43,7 +43,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListMieszkanieTitle_budynekId}"/>
                             </f:facet>
-                            <h:outputText value="#{item.budynekId}"/>
+                            <h:outputText value="#{item.budynekId.adres}"/>
                         </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{mieszkanieController.prepareCreate}" update=":MieszkanieCreateForm" oncomplete="PF('MieszkanieCreateDialog').show()"/>
