--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -19,7 +19,7 @@
             <p:layoutUnit position="north" size="65" header="#{bundle.AppName}">
                 <h:form id="menuForm">
                     <p:menubar>
-                        <p:menuitem value="#{bundle.Home}" outcome="/index" icon="ui-icon-home"/>
+                        <p:menuitem value="#{bundle.Home}" outcome="/zalogowany_admin" icon="ui-icon-home"/>
                         <p:submenu label="#{bundle.Maintenance}">
                             <p:menuitem value="Awaria" outcome="/awaria/List.xhtml" />
                             <p:menuitem value="Budynek" outcome="/budynek/List.xhtml" />
