--- a/web/oplaty/List.xhtml
+++ b/web/oplaty/List.xhtml
@@ -57,6 +57,19 @@
                             </f:facet>
                             <h:outputText value="#{item.media}"/>
                         </p:column>
+                          <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.ListOplatyTitle_miesiac}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.miesiac}"/>
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.ListOplatyTitle_rok}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.rok}"/>
+                        </p:column>
+                        
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListOplatyTitle_mieszkanieId}"/>
