--- a/web/oplaty/View.xhtml
+++ b/web/oplaty/View.xhtml
@@ -22,6 +22,10 @@
                         <h:outputText value="#{oplatyController.selected.ogrzewanie}" title="#{bundle.ViewOplatyTitle_ogrzewanie}"/>
                         <h:outputText value="#{bundle.ViewOplatyLabel_media}"/>
                         <h:outputText value="#{oplatyController.selected.media}" title="#{bundle.ViewOplatyTitle_media}"/>
+                        <h:outputText value="#{bundle.ViewOplatyLabel_miesiac}"/>
+                        <h:outputText value="#{oplatyController.selected.miesiac}" title="#{bundle.ViewOplatyTitle_miesiac}"/>
+                        <h:outputText value="#{bundle.ViewOplatyLabel_rok}"/>
+                        <h:outputText value="#{oplatyController.selected.rok}" title="#{bundle.ViewOplatyTitle_rok}"/>
                         <h:outputText value="#{bundle.ViewOplatyLabel_mieszkanieId}"/>
                         <h:outputText value="#{oplatyController.selected.mieszkanieId}" title="#{bundle.ViewOplatyTitle_mieszkanieId}"/>
                     </p:panelGrid>
