--- a/web/oplaty/Edit.xhtml
+++ b/web/oplaty/Edit.xhtml
@@ -22,6 +22,10 @@
                         <p:inputText id="ogrzewanie" value="#{oplatyController.selected.ogrzewanie}" title="#{bundle.EditOplatyTitle_ogrzewanie}" required="true" requiredMessage="#{bundle.EditOplatyRequiredMessage_ogrzewanie}"/>
                         <p:outputLabel value="#{bundle.EditOplatyLabel_media}" for="media" />
                         <p:inputText id="media" value="#{oplatyController.selected.media}" title="#{bundle.EditOplatyTitle_media}" required="true" requiredMessage="#{bundle.EditOplatyRequiredMessage_media}"/>
+                        <p:outputLabel value="#{bundle.EditOplatyLabel_miesiac}" for="miesiac" />
+                        <p:inputText id="miesiac" value="#{oplatyController.selected.miesiac}" title="#{bundle.EditOplatyTitle_miesiac}" required="true" requiredMessage="#{bundle.EditOplatyRequiredMessage_miesiac}"/>
+                        <p:outputLabel value="#{bundle.EditOplatyLabel_rok}" for="rok" />
+                        <p:inputText id="rok" value="#{oplatyController.selected.rok}" title="#{bundle.EditOplatyTitle_rok}" required="true" requiredMessage="#{bundle.EditOplatyRequiredMessage_rok}"/>
                         <p:outputLabel value="#{bundle.EditOplatyLabel_mieszkanieId}" for="mieszkanieId" />
                         <p:selectOneMenu id="mieszkanieId" value="#{oplatyController.selected.mieszkanieId}" required="true" requiredMessage="#{bundle.EditOplatyRequiredMessage_mieszkanieId}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
